fix edit profile background for dark mode

--- a/src/app/pages/edit-profile/edit-profile.page.scss
+++ b/src/app/pages/edit-profile/edit-profile.page.scss
@@ -9,7 +9,7 @@ user-avatar {
   }
 }
 ion-content {
-  --background: linear-gradient(#D0EAFF, #fff);
+  --background: linear-gradient(var(--ion-color-tertiary), var(--ion-color-light));
 }
 ion-list {
   --ion-item-background: transparent;
